traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:9: error: not found: value setPosition
      setPosition(k,y)
      ^