traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var a=getMondeHauteur()
  var b=getMondeLargeur()
	var cpt=0
  var y=0
  var k=0
  while (getX()!=a && getY!=b){
    while (k<a){
      ecritMessage(cpt)
      setPosition(k,y)
      cpt+=1
      k+=1
    }
    y=y+1
  }

}
